# zsrcstd

./: .gitignore  CMakeLists.txt  lib.json  readme.md  resources.rc
include/: zsr_asm_const.S  zsr_chencoding.h  zsr_container.h  zsr_file.h  zsr_format.h  zsr_locale.h  zsr_math.h  zsr_pipe.h  zsr_socket.h  zsr_std.h  zsr_stdio.h  zsr_stdlib.h  zsr_string.h  zsr_thread.h  zsr_type.h
include/regex/: regex.h
include/syscall/: readme.md  zsyscall.h
include/z-pyapi/: pyapi.h  pyfile.h
include/z-regexlib/: regexlib.h
src/: zsr_chencoding.c  zsr_file.c  zsr_format.c  zsr_locale.c  zsr_math.c  zsr_prvt.h  zsr_socket.c  zsr_std.c  zsr_string.c  zsr_type.c  zsr_wformat.c  zsr_xapi.h
src/pyapi/: pyapi.c
src/regex/: regex.c  regex_cond.c
src/syscall/: z64sys.S  z64sysu.S  zsyscall.c  zsyscall64.S
src/unix-x86_64/: chainlist.S  futex.S  list.S  pipe.S  pipe.c  socket.S  socket.c  std.S  std.c  stdio.S  stdio.c  string.S  syscall64.S  thread.S  thread.c
src/unix-x86_64/headers/: pipe_S.h  socket_S.h  std_S.h  stdio_S.h  syscall_S.h  thread_S.h
src/win-amd64/: chainlist.S  list.S  mutex.S  pipe.S  pipe.c  socket.S  socket.c  std.S  std.c  stdio.S  stdio.c  string.S  thread.S  thread.c
src/win-amd64/headers/: pipe_S.h  socket_S.h  std_S.h  stdio_S.h  thread_S.h
src/z-pyapi/: pyapi.c
src/z-regexlib/: regex.c  regex_cond.c
syscall/: lib.json  readme.md  z64sys.S  zsyscall.c  zsyscall.h  zsyscall64.S
